@@ -32,13 +32,18 @@ admin.site.register(SaleCategory,SaleCategoryAdmin)
 
 class SaleProductAdmin(admin.ModelAdmin):
     
-    list_display = ('outer_id','pic_link','title_link','price','supplier_link','platform','hot_value','sale_price','status','modified')
+    list_display = ('outer_id','pic_link','title_link','price','supplier_link','platform','hot_value','sale_price','status','contactor','modified')
     list_display_links = ('outer_id',)
     #list_editable = ('update_time','task_type' ,'is_success','status')
     
     ordering   = ('-hot_value',)
     list_filter   = ('sale_category','platform','status',('created',DateFieldListFilter),('modified',DateFieldListFilter))
-    search_fields = ['id','title','outer_id','sale_supplier__supplier_name']
+    search_fields = ['id','title','outer_id','sale_supplier__supplier_name','contactor__username']
+    
+    def get_readonly_fields(self, request, obj=None):
+        if  'contactor' not in self.readonly_fields:
+            self.readonly_fields = self.readonly_fields + ('contactor',)
+        return self.readonly_fields
     
     def pic_link(self, obj):
 #         abs_pic_url = '%s%s'%(settings.MEDIA_URL,obj.pic_url)
